<resources>
    <string name="app_name">Muster for Party</string>

    <!--
        Faccebook
    -->
    <string name="facebook_app_id">325037874764639</string>
    <string name="fb_login_protocol_scheme">fb325037874764639</string>

    <!--
        Login Activity
    -->
    <string name="button_map">Pokaż Mapę</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Hasło</string>
    <string name="login_create_button">Utwórz konto</string>
    <string name="login_signin_button">Zaloguj</string>
    <string name="fb_login">Zaloguj FB</string>
    <!--
        Track Activity
    -->
    <string name="title_activity_track">Mapa</string>
    <string name="add_group">Dodaj grupę</string>
    <string name="add_place">Dodaj miejsce</string>
    <string name="show_group">Grupy</string>
    <string name="switch_group">Zmień grupę</string>
    <string name="log_out">Wyloguj się</string>
    <!--
        Add Group Activity
    -->
    <string name="add_group_name">Nazwa grupy</string>
    <string name="add_group_placeholder">Wpisz nazwę</string>
    <string name="add_group_type">Rodzaj grupy</string>
    <string name="group_type_dynamic">Dynamiczna</string>
    <string name="group_type_admin">Jednostronna</string>
    <string name="group_type_net">Sieć</string>
    <string name="add_group_invite">Zaproś znajomych</string>
    <!--
        Add Place Activity
    -->
    <string name="add_place_name">Nazwa miejsca</string>
    <string name="add_place_placeholder">Wpisz nazwę</string>
    <string name="add_place_current_location">Obecna lokalizacja</string>
    <string name="add_place_note">Notatka</string>
    <!--
        Group Activity
    -->
    <string name="exit_content">Opuść grupę</string>
    <string name="addUser_content">Dodaj użytkownika</string>
    <string name="addPlace_content">Dodaj miejsce</string>
    <string name="group_users">Użytkownicy</string>
    <string name="group_places">Miejsca</string>
    <string name="exit_group_alert">Na pewno chcesz opuścić grupę?</string>
    <string name="exit_group_warning">Nie będziesz już miał dostępu.</string>
    <string name="exit_group_confirm">Opuść</string>
    <string name="exit_group_cancel">Zaniechaj</string>
    <!--
        Edit Group Activity
    -->
    <string name="delete_group_button">Usuń grupę</string>
    <string name="delete_group_confirm">Usuń</string>
    <string name="delete_group_cancel">Zaniechaj</string>
    <string name="delete_group_alert">Na pewno chcesz usunąć grupę?</string>
    <string name="delete_group_warning">Wszystkie dane zostaną trwale usunięte.</string>
    <!--
        Users Invite List Item
    -->
    <string name="user_image_content">Zdjęcie użytkownika</string>

    <!--
        Groups List Item
    -->
    <string name="groups_image_content">Logo grupy</string>
    <string name="groups_admin_content">Jesteś administratorem tej grupy</string>

    <!--
        Groups List Item
    -->
    <string name="groups_cancel">Wróć</string>
    <string name="title_activity_choose_place_location">Map</string>

    <!--
        Places
    -->

</resources>
