<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupActivity">

    <TextView
        android:id="@+id/groupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/exitGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_exit_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scaleX="2"
        android:scaleY="2"
        android:contentDescription="@string/exit_content"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_users"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupName"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/addUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add_user_icon"
        android:scaleY="2"
        android:scaleX="2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exitGroup"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/addUser_content"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/group_user_list"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintTop_toBottomOf="@id/addUser"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_places"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_user_list"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/addPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_place_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_user_list"
        android:scaleX="2"
        android:scaleY="2"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/addPlace_content"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/group_place_list"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintTop_toBottomOf="@id/addPlace"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"/>




</android.support.constraint.ConstraintLayout>